# andre-ai-harness

./: .gitignore  exec-approvals.json  gateway.cmd  openclaw.json  openclaw.json.backup  openclaw.json.bak  openclaw.json.bak.1  openclaw.json.bak.2  openclaw.json.bak.3  update-check.json
.openclaw/workspace/: AGENTS.md  CAPABILITIES.md  Cargo.toml  FINAL-COMPLETE.md  FUTURE_FEATURES.md  HEARTBEAT.md  INTEGRATION_SCAN_REPORT.md  INTEGRATION_SUMMARY.md  README.md  SESSION_CLOSE_2026-04-02.md  VISUAL_STUDIO_SETUP.md
.openclaw/workspace/.openclaw/: workspace-state.json
.openclaw/workspace/Andre Versions Backup/: ANDREW-AI-PROFILE.md  openclaw-complete-manifest.md  openclaw-complete-setup-guide.md
.openclaw/workspace/agents/: python-reviewer.md
.openclaw/workspace/autoresearch-demo/: experiments.md  program.md
.openclaw/workspace/benchmarks/: skill-system-post-enhancement.md
.openclaw/workspace/contexts/: research.md
.openclaw/workspace/docs/: knowledge-curator-workflow.md
.openclaw/workspace/hooks/: review-post-execution.md  session-end.md  session-start.md
.openclaw/workspace/manifests/: install-components.json  install-components.schema.json
.openclaw/workspace/memory/: 2026-03-23.md  2026-03-28.md  2026-03-30.md  2026-03-31-karpathy-autoresearch-security-analysis.md  2026-04-02.md  2026-04-03.md  gtx-980m-config-guide.md
.openclaw/workspace/plans/: TEMPLATE.md
.openclaw/workspace/registry/: VALIDATION-PHASE4.md  audit-config.yaml  contexts.yaml  eval-example-weather.yaml  eval-integration.yaml  eval-phase4.yaml  hooks.yaml  install-manifest.yaml  review-config.yaml  targets.yaml
.openclaw/workspace/schemas/: agent.schema.json  registry.schema.json
.openclaw/workspace/scripts/: cmd-backup.ps1  cmd-checkpoint.ps1  cmd-multi-backend.ps1  cmd-prune.ps1  cmd-skill-health.ps1  cmd-update-docs.ps1  cmd-whoami.ps1  deploy.ps1  test-all.ps1
.openclaw/workspace/second-brain/: README-fixed.md
.openclaw/workspace/skills/: implement second brain.txt
.openclaw/workspace/tests/: ci-eval-runner.ps1  cross_module_data_test.rs
workspace/: AGENTS.md  AGENTS.md.bak.20260401  Cargo.toml  DEMO_COMPACTION.md  FINAL-VALIDATION-COMPLETE.md  FINAL-VALIDATION.md  IDENTITY.md  IMPLEMENTATION_ANALYSIS.md  MEMORY.md  MEMORY_SPEC_V2.md  PROJECT-INDEX.md  SOUL.md  TOOLS.md  USER.md  VALIDIERUNGSREPORT.md  VS_CPP_WORKLOAD.md  analysis-report-20260326-0131.json  function-test.txt  openclaw_config_specification.md  security-audit-claw-code.md  test_regex.py
workspace/.github/: pull_request_template.md
workspace/.github/ISSUE_TEMPLATE/: bug_report.yml
workspace/.github/workflows/: ci.yml
workspace/.openclaw/workspace/: AGENTS.md
workspace/Andre Versions Backup/: MANIFEST-TEMPLATE.md
workspace/SecondBrain/: .graphify_analysis.json  .graphify_ast.json  .graphify_detect.json  .graphify_extract.json  .graphify_labels.json  .graphifyignore  graphify_build.py  graphify_export.py  graphify_semantic.py  skills
workspace/SecondBrain/00-Meta/: Capabilities-Index.md  MOC-Agent-Knowledge-Check.md  SYSTEM-STATUS.md  vault-config.md  vault-structure.yaml
workspace/SecondBrain/01-Daily/: 02-04-2026-SESSION-LOG.md  02-04-2026.md  04-04-2026.md  05-04-2026-v1.md  06-04-2026.md  10-04-2026-retrospektive.md  10-04-2026-v2.md  10-04-2026.md  11-04-2026.md  12-04-2026.md  13-04-2026.md  14-04-2026-voice-session.md  14-04-2026.md  15-04-2026.md  16-04-2026.md  26-03-2026.md  30-03-2026.md  31-03-2026-autoresearch-comparison-karpathy-vs-ecc.md  31-03-2026-learning-report-powershell.md  INCIDENT-2026-04-11-edit-tool-error.md
workspace/SecondBrain/04-Decisions/: ADR-001-markdown-migration.md  ADR-002-docker-vs-k8s.md  ADR-003-test-k8s-migration.md  ADR-004-openclaw-architecture.md  Session-2026-03-30.md  Session-2026-04-02-1.md  Session-2026-04-04.md  Session-2026-04-05-1.md  Session-2026-04-05-2.md  (+3 more)
workspace/agents/: architect.md  code-reviewer.md  knowledge-curator.md  planner.md  security-reviewer.md
workspace/autoresearch-demo/: README.md
workspace/benchmarks/: skill-system-pre-enhancement.md
workspace/contexts/: dev.md  review.md
workspace/docs/: ADR-001-no-claw-discovery.md  drift-doctor-concept.md  edit-tool-problem-analysis.md  multi-target-adapter-concept.md  resilient-agent-integration.md
workspace/hooks/: session-start.md
workspace/mcp-configs/: README.md  mcp-servers.json
workspace/memory/: 2026-03-22.md  2026-03-26.md  2026-03-31-autoresearch-ecc-masterplan.md  2026-03-31-karpathy-autoresearch-full-analysis.md  2026-03-31.md  2026-04-02-FINAL.md  2026-04-08.md  2026-04-09-test-session.md  2026-04-11.md  2026-04-12.md  2026-04-13.md  2026-04-14.md  2026-04-15.md  2026-04-16.md
workspace/mini-evolve-loop/: config.yaml  evolve.py  llm_router.py  run-evolve.ps1
workspace/obsidian-vault/: MOC-Startseite.md  README.md
workspace/plans/: example-phase3-prep.md  voice-conversation.md
workspace/registry/: README.md  VALIDATION-PHASE2.md  VALIDATION.md  agents.yaml  commands.yaml  drift-config.yaml  eval-phase1.yaml  eval-phase2.yaml  eval-phase3.yaml  hooks.yaml  instincts.yaml  projects.yaml  search-index.json  skills.yaml
workspace/schemas/: skill.schema.json
workspace/scripts/: Convert-Sessions-v2.20260406-234527.ps1  Convert-Sessions-v2.ps1  Convert-Sessions.ps1  Safe-Delete.ps1  Safe-Delete.psm1  Safe-FileWrite.ps1  Safe-FileWrite.psm1  cmd-context.ps1  cmd-learn.ps1  cmd-model-route.ps1  cmd-orchestrate.ps1  cmd-quality-gate.ps1  cmd-resume-session.ps1  cmd-stats.ps1  cmd-tdd.ps1  cmd-update-docs.ps1  cmd-verify.ps1  drift-check.ps1  install-check.ps1  validate-complete.ps1
workspace/search-engine/: .sync-state.json  DOKUMENTATION.md  README.md  TEST-REPORT.md  auto-sync.js  indexer.js  scrubber.js  search.js  session-sync.js  sync.bat  tagger.js  test-sensitive.md  test-sensitive.md.backup  vault-analysis-report.json  vault-analyzer.js
workspace/second-brain/: SKILL.md
workspace/skills/: voice_bridge_monitor.py
workspace/test-atomic/: test1.txt  test2.20260407-214353.txt  test4.txt
workspace/tests/: ci-test-runner.ps1  integration_test.rs
(+1109 files in other folders)
