[workspace]
members = ["crates/openclaw-agents", "crates/openclaw-cli",
    "crates/openclaw-core", "crates/openclaw-parser", "crates/openclaw-rag",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
tracing = "0.1"
