[workspace]
members = [
    "skills/secure-api-client",
    "skills/security-review",
    "crates/ecc-runtime",
    "crates/memory-compaction",
    "crates/tool-registry",
]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Andrew (OpenClaw) <openclaw@ecc-framework.local>"]
license = "MIT"

[workspace.dependencies]
async-trait = "0.1"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
tracing = "0.1"
