[package]
name = "openclaw-agents"
version = "0.1.0"
edition = "2021"
description = "Agent system for OpenClaw AI Harness"
authors = ["andre"]

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
tracing = { workspace = true }
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
tokio-test = "0.4"
