[package]
name = "openclaw-rag"
version = "0.1.0"
edition = "2021"
description = "RAG system for OpenClaw - Vector DB and Embeddings"
authors = ["andre"]

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
tracing = { workspace = true }
async-trait = "0.1"

# RAG-specific
regex = "1.10"
walkdir = "2.5"

# LanceDB
lancedb = "0.18"
arrow-array = "54.0"
arrow-schema = "54.0"

# Python Bridge für BGE-M3
pyo3 = { version = "0.23", features = ["auto-initialize"], optional = true }

[features]
default = []
python-embeddings = ["pyo3"]

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
