[package]
name = "tool-registry"
version = "0.1.0"
edition = "2021"
authors = ["Andrew (OpenClaw) <openclaw@ecc-framework.local>"]
description = "Tool registry with file operations, bash execution, and MCP integration"
license = "MIT"

[dependencies]
# Async
async-trait = "0.1"
tokio = { version = "1.35", features = ["full", "process"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Tracing
tracing = "0.1"

# Regex for grep patterns
regex = "1.10"

# Glob for file patterns
glob = "0.3"

# Which for command lookup
which = "6.0"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"

[lib]
name = "tool_registry"
path = "src/lib.rs"
