[package]
name = "secure-api-client"
version = "0.1.0"
edition = "2021"
authors = ["Andrew (OpenClaw) <openclaw@ecc-framework.local>"]
description = "Secure HTTP API client with SSE streaming, auth, rate limiting, and retry logic"
license = "MIT"

[dependencies]
# HTTP Client
reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls"] }

# Async Runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Streaming
futures = "0.3"
bytes = "1.5"

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Rate Limiting
governor = "0.2"

# Tracing/Logging
tracing = "0.1"

# Random for jitter
rand = "0.8"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
wiremock = "0.6"

[lib]
name = "secure_api_client"
path = "src/lib.rs"
